--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
 
 <footer class="site-footer">
     <div class="inner">
-        <span>Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://github.com/qckanemoto/jekyll-qck-theme">QckTheme</a></span>
+        <span>&copy;Copyright 2015 Powered by huster-passionzhang</span>
     </div>
 </footer>
 
